--- a/src/pages/LendPage/components/LendCard/LendCard.module.less
+++ b/src/pages/LendPage/components/LendCard/LendCard.module.less
@@ -44,12 +44,6 @@
     top: 28px;
     right: 24px;
   }
-
-  svg {
-    fill: var(--content-primary);
-    width: 24px;
-    height: 24px;
-  }
 }
 .chevronButton.active svg {
   transform: rotate(180deg);
